# iggy_builder

./: .gitignore  Cargo.toml  README.md
examples/: Cargo.toml
examples/src/new-sdk/consumer/: main.rs
examples/src/new-sdk/producer/: main.rs
examples/src/new-sdk/stream/: main.rs
examples/src/new-sdk/stream-basic/: main.rs
examples/src/new-sdk/stream-consumer/: main.rs
examples/src/new-sdk/stream-producer/: main.rs
examples/src/shared/: args.rs  client.rs  stream.rs
examples/src/stream-basic/: main.rs
sdk/: Cargo.toml
sdk/src/builder/: builder.rs  mod.rs
sdk/src/builder/config/: args.rs  build_fields.rs  config_fields.rs  config_iggy.rs  config_iggy_consumer.rs  config_iggy_producer.rs  config_iggy_stream.rs  config_iggy_user.rs  config_tls.rs  mod.rs  shared_config.rs
sdk/src/builder/event_consumer/: event_consumer.rs  mod.rs
sdk/src/builder/event_consumer_trait/: event_consumer.rs
sdk/src/builder/event_processor/: event_processor.rs  event_processor_error.rs  mod.rs
sdk/src/builder/event_producer/: event_producer.rs
sdk/src/builder/event_producer_trait/: event_producer.rs
sdk/src/builder/iggy_consumer_ext/: iggy_consumer_message_ext.rs  iggy_consumer_message_trait.rs
sdk/src/builder/iggy_stream/: build_iggy_consumer.rs  build_iggy_producer.rs  config_iggy_stream.rs  event_consumer.rs  iggy_stream.rs  iggy_stream_consumer.rs  iggy_stream_producer.rs  mod.rs
sdk/src/builder/iggy_stream/config/: config_iggy_consumer.rs  config_iggy_producer.rs  config_iggy_stream.rs  mod.rs
sdk/src/builder/message_consumer/: event_consumer.rs  getters.rs  message_consumer.rs  mod.rs
sdk/src/builder/message_producer/: event_producer.rs  getters.rs  message_producer.rs  mod.rs
sdk/src/builder/message_stream/: build_iggy_client.rs  build_iggy_consumer.rs  build_iggy_producer.rs  event_consumer.rs  message_stream.rs  mod.rs
sdk/src/builder/utils/: mod.rs  shutdown_utils.rs  tcp_client_builder.rs
sdk/tests/: mod.rs
sdk/tests/builder/: iggy_builder_tests.rs  mod.rs
sdk/tests/config/: config_fields_tests.rs  config_iggy_tests.rs  config_iggy_user_tests.rs  config_tls_tests.rs  iggy_config_tests.rs  iggy_tcp_tls_config_tests.rs  iggy_user_tests.rs  mod.rs
sdk/tests/stream/: iggy_stream_tests.rs  mod.rs
