[package]
name = "iggy_examples"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"


[[example]]
name = "new-sdk-consumer"
path = "src/new-sdk/consumer/main.rs"


[[example]]
name = "new-sdk-producer"
path = "src/new-sdk/producer/main.rs"


[[example]]
name = "new-sdk-stream-basic"
path = "src/new-sdk/stream-basic/main.rs"


[[example]]
name = "new-sdk-stream-consumer"
path = "src/new-sdk/stream-consumer/main.rs"


[[example]]
name = "new-sdk-stream-producer"
path = "src/new-sdk/stream-producer/main.rs"


[dependencies]
sdk = { path = "../sdk" }
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
futures-util = "0.3.31"
iggy = { version = "0.6" }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
