[package]
name = "iggy"
version = "0.6.93"
edition = "2021"
license = "Apache-2.0"


[dependencies]
async-trait = "0.1.85"
bytes = "1.9.0"
futures = "0.3.31"
futures-util = "0.3.31"
iggy = {version = "0.6"}
strum = { version = "0.26.3", features = ["derive"] }
tracing = { version = "0.1.41" }
thiserror = "2.0.9"
